--- a/proto/BUILD
+++ b/proto/BUILD
@@ -1,14 +1,30 @@
+
+# BUILD.bazel
+# load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_library")
+
 proto_library(
     name = "GamConcensus",
     srcs = ["GamConcensus.proto"],
-    deps = ["@com_google_protobuf//:any_proto"],
+    visibility = ["//visibility:public"],
 )
 
-# BUILD.bazel
-load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_library")
-
-cpp_proto_library(
-    name = "concencus",
+load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_compile")
+cpp_proto_compile(
+    name = "cppGamConcensus",
     protos = [":GamConcensus"],
-    visibility = ["//src:__pkg__"],
+
 )
+
+load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_compile","cpp_grpc_library")
+cpp_grpc_library(
+    name = "cppGamConcensusGrpclib",
+    protos = [":GamConcensus"],
+    visibility = ["//visibility:public"],
+)
+
+cpp_grpc_compile(
+    name = "cppGamConcensusGrpc",
+    protos = [":GamConcensus"],
+    visibility = ["//visibility:public"],
+)
+
