--- a/test/BUILD
+++ b/test/BUILD
@@ -2,15 +2,17 @@
 cc_binary(
     name = "greeter_server",
     srcs = ["greeter_server.cpp"],
+    defines = ["BAZEL_BUILD"],
     deps = [
-        ":cppGamConcensusGrpclib",
+        "//proto:cppGamConcensusGrpclib", 
     ],
 )
 
 cc_binary(
     name = "greeter_client",
     srcs = ["greeter_client.cpp"],
+    defines = ["BAZEL_BUILD"],
     deps = [
-        ":cppGamConcensusGrpclib",
+        "//proto:cppGamConcensusGrpclib",
     ],
 )
